[gd_scene load_steps=8 format=2]

[ext_resource path="res://Scenes/Ship/Ship.gd" type="Script" id=1]
[ext_resource path="res://Assets/Kenney Space Shooter/PNG/playerShip1_red.png" type="Texture" id=2]
[ext_resource path="res://Assets/Kenney Space Shooter/PNG/Effects/fire00.png" type="Texture" id=3]
[ext_resource path="res://Assets/Kenney Space Shooter/PNG/Damage/playerShip1_damage1.png" type="Texture" id=4]
[ext_resource path="res://Assets/Kenney Space Shooter/PNG/Damage/playerShip1_damage2.png" type="Texture" id=5]
[ext_resource path="res://Assets/Kenney Space Shooter/PNG/Damage/playerShip1_damage3.png" type="Texture" id=6]

[sub_resource type="CircleShape2D" id=1]

[node name="Ship" type="KinematicBody2D"]
collision_layer = 17
collision_mask = 17
script = ExtResource( 1 )
moveSpeed = 1000

[node name="Shape" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
z_index = 4
texture = ExtResource( 2 )

[node name="DMG1" type="Sprite" parent="."]
visible = false
z_index = 4
texture = ExtResource( 4 )

[node name="DMG2" type="Sprite" parent="."]
visible = false
z_index = 4
texture = ExtResource( 5 )

[node name="DMG3" type="Sprite" parent="."]
visible = false
z_index = 4
texture = ExtResource( 6 )

[node name="CPUParticles2D" type="CPUParticles2D" parent="."]
position = Vector2( 0, 31 )
amount = 3
lifetime = 0.1
speed_scale = 5.11
local_coords = false
texture = ExtResource( 3 )
direction = Vector2( 0, 1 )
spread = 0.0
gravity = Vector2( 0, 0 )
initial_velocity = 410.11
angle = 180.0
